# PIPPack

./: .gitignore  README.md  assess_packing.py  ensembled_inference.py  inference.py  pyproject.toml  train.py
config/: inference.yaml  inference_ensemble.yaml  train.yaml
config/dataset/: bc40.yaml  top2018.yaml
config/experiment/: pippack_ipmp.yaml  pippack_ipmp_finetune.yaml  pippack_mpnn.yaml
config/model/: pippack.yaml  pippack_finetune.yaml
data/: bc40_dataset.py  extract_targets_from_full_targets.py  features.py  featurizer.py  make_pdb_dir_for_benchmark.py  protein.py  top2018_dataset.py
env/: pippack_env.yaml
eval/: compute_clashscore.py  eval_rotamers.py  rosetta_packer.py  rosetta_sc_min.py
examples/: run_inferences.py  run_inferences_batch.py
model/: loss.py  modules.py  resampling.py
model_weights/: pippack_model_1_config.pickle  pippack_model_2_config.pickle  pippack_model_3_config.pickle
notebooks/: PIPPack.ipynb
pippack/: __init__.py  ensembled_inference.py  inference.py  pippack.py
pippack/data/: bc40_dataset.py  features.py  featurizer.py  make_pdb_dir_for_benchmark.py  protein.py  residue_constants.py  top2018_dataset.py
pippack/model/: loss.py  modules.py  optim.py  resampling.py
proteinmpnn/: model_utils.py  rigid_utils.py  testing.py  training.py  utils.py
scripts/: run_assessment.sh  run_clashscore.sh  run_ensemble.sh  run_inference.sh  run_proteinmpnn_testing.sh  run_proteinmpnn_training.sh  run_rosetta_packer.sh  run_rosetta_sc_min.sh  run_rotamer_eval.sh  run_training.sh
utils/: train_utils.py  utils.py
(+9 files in other folders)
